# mod_integraltabular

./: Cargo.toml  database.sqlite  diesel.toml
migrations/2025-07-28-020920_create_expressions_table/: down.sql  up.sql
migrations/2025-07-28-173445_create_initial_tables/: up.sql
src/: lib.rs  main.rs  schema.rs
src/modulo_integral/: calculo.rs  integral_tab.rs  mod.rs  modulo_tab.rs  simbolico.rs  tipos.rs
