[package]
name = "firstproject"
version = "0.1.0"
edition = "2024"

[dependencies]
# Para la interfaz web con yew
yew = { version = "0.21", features = ["csr"] }

regex ="1.11.1"
once_cell ="1.x"

# Para manejar JSON en la comunicación
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }